Fixed column resizer overflowing resizing-container when placeholder is shown

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -73,7 +73,6 @@
 
   &.rst-showPlaceholder {
     flex: none;
-    contain: none;
   }
 }
 
